fixed sidebar not showing bottom

--- a/assets/sass/sidebar.sass
+++ b/assets/sass/sidebar.sass
@@ -7,6 +7,7 @@
     overflow: hidden
 
 .sidebar
+    box-sizing: border-box
     height: 100%
     padding: 1.5em 1em 0
     overflow-x: hidden
